changed readme, fixed overflow in 'Translation' component

--- a/src/Components/Translation/Translation.module.scss
+++ b/src/Components/Translation/Translation.module.scss
@@ -6,8 +6,11 @@
     top: 50%;
     z-index: 3;
     transition: transform 0.5s ease-in-out;
-    width: calc(100vw - 100px);
+    width: 100vw;
+    padding: 50px;
     text-align: left;
+    max-height: 100vh;
+    overflow-y: auto;
 
 
     &.hidden {
